--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-  background: #4CAF50;
+  background: #df0352;
   color: white;
   text-align: center;
   padding: 2rem 1rem;
