--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-  background: #900003;
+  background: #b10b47;
   color: white;
   text-align: center;
   padding: 2rem 1rem;
