--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ section h2 {
 
 .slide-text p {
   font-size: 0.2rem;
-  line-height: 0.8;
+  line-height: 1.8;
   color: #555;
 }
 
@@ -370,8 +370,19 @@ iframe {
   iframe {
     height: 1100px;
   }
+  .slide-text h3 {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+  color: #333;
+  }
+
+.slide-text p {
+  font-size: 0.9rem;
+  line-height: 0.8;
+  color: #555;
+  }
 }
-/* Adjusting the Swiper Container */
+/* Adjusting the Swiper Container Back to main desktop container, out of media for mobile, Notice brace alignment*/ 
 .swiper-container {
   width: 100%;
   height: calc(100vh - 60px); /* Adjust height to fill the screen below the green header */
