--- a/styles.css
+++ b/styles.css
@@ -125,17 +125,17 @@ section h2 {
   text-align: left;
 }
 
-.slide-text h3 {
+/*.slide-text h3 {
   font-size: 2rem;
   margin-bottom: 1rem;
   color: #333;
-}
+}*/
 
-.slide-text p {
+/*.slide-text p {
   font-size: 0.2rem;
   line-height: 1.8;
   color: #555;
-}
+}*/
 
 .swiper-pagination {
   text-align: center;
