--- a/styles.css
+++ b/styles.css
@@ -438,8 +438,8 @@ iframe {
   }
 
   .slide-text p {
-  font-size: 1.2rem;
-  line-height: 1.8;
+  font-size: 0.9rem;
+  line-height: 1rem;
   color: #555;
   }
 
