--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ section {
   padding: 2.5rem;
   margin-bottom: 2rem;
   text-align: center;
-  background-color: #f7f7f7;
+  background-color: #f7e7ec;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
@@ -296,6 +296,7 @@ iframe {
     padding: 2rem 1rem;
     margin-bottom: 1.5rem;
     font-size: 1rem;
+    background-color: #f7e7ec;  
   }
 
   section h2 {
