--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 header {
-  background-image: url('images/header-bg.jpg'); /* Example image path */
+  background-image: url('Images/header-bg.jpg'); /* Example image path */
   background-size: cover;
   background-position: center;
   color: white;
