--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ section {
   padding: 2.5rem;
   margin-bottom: 2rem;
   text-align: center;
-  background-color: #f7f7f7;
+  background-color: #f8f9cd;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
@@ -57,7 +57,7 @@ section h2 {
 }
 
 .creation {
-  background: #ffffff;
+  background: #fcfbf0;
   padding: 1rem;
   border-radius: 8px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -165,7 +165,7 @@ section h2 {
 
 
 #highlight .highlight-card {
-  background: #fff;
+  background: #fcfbf0;
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 1.5rem;
@@ -228,7 +228,7 @@ section h2 {
 
 
 .about-wrapper {
-  background: #f9f9f9;
+  background: #fcfbf0;
   border-radius: 8px;
   padding: 1.5rem;
   margin: 1.5rem 0;
