--- a/styles.css
+++ b/styles.css
@@ -298,7 +298,7 @@ iframe {
     padding: 2rem 1rem;
     margin-bottom: 1.5rem;
     font-size: 1rem;
-    background-color: #f7f7f7;  
+    background-color: #fcfbf0;  
   }
 
   section h2 {
