--- a/styles.css
+++ b/styles.css
@@ -299,7 +299,7 @@ iframe {
     padding: 2rem 1rem;
     margin-bottom: 1.5rem;
     font-size: 1rem;
-    background-color: #fcfbf0;  
+    background-color: #f8f9cd;  
   }
 
   section h2 {
@@ -338,7 +338,7 @@ iframe {
     padding: 1rem; /* Maintain comfortable padding */
   }
   .highlight-card img{
-    margin-bottom:-4rem;
+    margin-bottom:-7rem;
   }
   .highlight-card h3{
     margin-bottom:-6.5rem;
